Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexora-ingress
  namespace: nexora

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

spec:
  ingressClassName: alb

  rules:
    - http:

        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: nexora-backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: nexora-frontend
                port:
                  number: 80
